--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-form": "^4.0.1",
     "react-hook-form": "^7.40.0",
     "react-is": "^18.2.0",
+    "react-markdown": "^8.0.4",
     "react-router-dom": "^6.4.5",
+    "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^5.3.6",
     "zod": "^3.20.2"
   },
